k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: neural-babel
  namespace: default
spec:
  hosts:
  - "neural-babel.default.74.224.102.71.nip.io"
  gateways:
  - "knative-serving/knative-ingress-gateway"
  - "knative-serving/knative-local-gateway"
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: neural-babel.default.svc.cluster.local
        port:
          number: 80
